# TuringCompiler

./: .gitignore  meson.build
doc/: callingconv.txt
grammar/: turingc.l  turingc.y
include/: exceptions.hpp  utils.hpp
include/assembler/: parser.hpp
include/backend/: instr.hpp  turingcompiler.hpp  turingstate.hpp
include/frontend/: asmgen.hpp  ast.hpp  parser.hpp  semcheck.hpp  symtab.hpp
include/output/: binarywriter.hpp
src/: utils.cpp
src/assembler/: main.cpp  parser.cpp
src/backend/: instr.cpp  turingcompiler.cpp  turingstate.cpp
src/frontend/: asmgen.cpp  ast.cpp  main.cpp  semcheck.cpp  symtab.cpp
src/output/: binarywriter.cpp
test/: test.asm  test.tc
